--- a/04_estimation.qmd
+++ b/04_estimation.qmd
@@ -202,10 +202,9 @@ model fit than the transportation impedance term.
 
 ```{r all-comp}
 #| label: fig-all-comp
-#| fig-cap:  Average change in the probability of the chosen alternative
-#| with respect to a 100% change in model variables.
+#| fig-cap:  Average change in the probability of the chosen alternative with respect to a 100% change in model variables.
 #| out-width: "6in"
-
+library(marginaleffects)
 tar_load(elasticities)
 
 absqrt <- scales::trans_new(
@@ -221,7 +220,7 @@ absqrt <- scales::trans_new(
 elasticities |> 
   modelplot(coef_map = cm) +
   scale_x_continuous(trans = absqrt, breaks = c(-0.01, 0, 0.01, 0.05, 1)) +
-  xlab("Average change in probability with 95\\% confidence interval.") +
+  xlab("Average change in probability with 95% confidence interval.") +
   scale_color_manual(values = wesanderson::wes_palette('Darjeeling1'))
 ```
 
