--- a/05_scenarios.qmd
+++ b/05_scenarios.qmd
@@ -299,10 +299,13 @@ s3cost <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "035") |>
   mutate(diff = (base - alt) / mkt_betas["SaltLake.market"])
 
 pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
+tar_load(gtfs_shape)
+gtfs_shape <- sf::st_simplify(gtfs_shape, dTolerance = 10)
 
 ggplot(s3cost, aes(fill = diff)) + 
   ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
   geom_sf(lwd = 0, alpha = 0.5) +
+  geom_sf(data = gtfs_shape |> filter(mode != "BRT"), aes(color = mode)) +
   scale_x_continuous(limits = c(-112.11, -111.7)) + 
   scale_y_continuous(limits = c(40.5, 40.8)) + 
   theme(axis.text.x = element_blank(),
@@ -310,6 +313,7 @@ ggplot(s3cost, aes(fill = diff)) +
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) +
   scale_fill_gradientn("Benefit [$]", colours = pal)
+  scale_color_manual("Transit", values = c("gray80", "black", "gray50"))
 ```
 
 ```{r s4results}
