--- a/04_estimation.qmd
+++ b/04_estimation.qmd
@@ -9,6 +9,7 @@ library(wesanderson)
 library(sf)
 library(ggspatial)
 library(viridisLite)
+knitr::opts_chunk$set(cache = FALSE)
 ```
 
 This section presents results on the nutrition environment in each of the three
@@ -203,7 +204,6 @@ model fit than the transportation impedance term.
 ```{r all-comp}
 #| label: fig-all-comp
 #| fig-cap:  Average change in the probability of the chosen alternative with respect to a 100% change in model variables.
-#| out-width: "6in"
 library(marginaleffects)
 tar_load(elasticities)
 
@@ -263,16 +263,16 @@ neighborhoods with the lowest concentrations of ethnic minorities in the region.
 #| label: fig-map-ut
 #| fig-cap: Modeled access to grocery stores in Utah County
 #| out-width: "6in"
-pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
-
 ggplot(utbgaccess, aes(fill = access)) +
-  ggspatial::annotation_map_tile("cartolight", zoom = 11) +
-  geom_sf(alpha = 0.7, lwd = 0) +
+  ggspatial::annotation_north_arrow(style = ggspatial::north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +
+  geom_sf(lwd = 0) +
+  ggspatial::annotation_map_tile("cartolight", zoom = 10, alpha = 0.5) +
     theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Access", colours = pal)
+  scale_fill_viridis_c("Access", direction = -1)
 ```
 
 Of course, much of this high access in the urban core of Utah County is achieved
@@ -305,24 +305,28 @@ both cases, this represents a serious additional cost for non-vehicle users.
 tar_load(nocaraccess)
 
 ggplot(nocaraccess, aes(fill = dclogsum)) +
-  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
-  geom_sf(lwd = 0, alpha = 0.7) +
+  ggspatial::annotation_map_tile("cartolight", zoom = 10) +
+  ggspatial::annotation_north_arrow(style = ggspatial::north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +
+  geom_sf(lwd = 0, alpha = 0.4) +
   scale_x_continuous(limits = c(-112.11, -111.7)) + 
   scale_y_continuous(limits = c(40.5, 40.8)) + 
     theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Access", colours = pal)
+  scale_fill_viridis_c("Access", direction = -1)
 
 ggplot(nocaraccess |> filter(!is.na(nocarlogsum)), aes(fill = nocarlogsum)) +
-  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
-  geom_sf(lwd = 0, alpha = 0.7) +
+  ggspatial::annotation_map_tile("cartolight", zoom = 10) +
+  ggspatial::annotation_north_arrow(style = ggspatial::north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +
+  geom_sf(lwd = 0, alpha = 0.4) +
   scale_x_continuous(limits = c(-112.11, -111.7)) + 
   scale_y_continuous(limits = c(40.5, 40.8)) + 
     theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Access", colours = pal)
+  scale_fill_viridis_c("Access", direction = -1)
 ```
