--- a/05_scenarios.qmd
+++ b/05_scenarios.qmd
@@ -156,6 +156,7 @@ in accessibility resulting from the improvement.
 #| fig-cap: Estimated per-household benefits of adding new full-service store in west Salt Lake Valley
 #| out-width: "6in"
 s1_altd <- tar_read(s1_access)
+tar_load(s1_stores)
 
 s1cost <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "035") |> 
   left_join(bg_acs, by = c("id" = "geoid")) |> 
@@ -163,18 +164,20 @@ s1cost <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "035") |>
   left_join(sl_base |> rename(base = dclogsum)) |> 
   left_join(s1_altd |> rename(alt = dclogsum)) |> 
   mutate(diff = (base - alt) / mkt_betas["SaltLake.market"])
-pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
 
-ggplot(s1cost, aes(fill = diff)) + 
-  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
-  geom_sf(lwd = 0, alpha = 0.5) +
+ggplot() +
+  geom_sf(data = s1cost, aes(fill = diff), lwd = 0) + 
+  ggspatial::annotation_map_tile(type = "cartolight", zoom = 11, alpha = 0.6) +
+  ggspatial::annotation_north_arrow(style = north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +
+  geom_sf(data = s1_stores, color = "black", shape = 21, size = 3, fill = "white") +
   scale_x_continuous(limits = c(-112.11, -111.7)) + 
   scale_y_continuous(limits = c(40.5, 40.8)) + 
   theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Benefit [$]", colours = pal)
+  scale_fill_viridis_c("Benefit [$]", direction = -1, na.value = NA)
 ```
 
 @fig-s1results shows the geographic distribution of benefits associated with
@@ -189,6 +192,7 @@ household makes a trip to a grocery store.
 #|   west Salt Lake Valley
 #| out-width: "6in"
 s2_altd <- tar_read(s2_access)
+tar_load(s2_stores)
 
 s2cost <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "035") |> 
   left_join(bg_acs, by = c("id" = "geoid")) |> 
@@ -198,16 +202,19 @@ s2cost <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "035") |>
   mutate(diff = (base - alt) / mkt_betas["SaltLake.market"])
 pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
 
-ggplot(s2cost, aes(fill = diff)) + 
-  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
-  geom_sf(lwd = 0, alpha = 0.5) +
+ggplot() +
+  geom_sf(data = s2cost, aes(fill = diff), lwd = 0) +
+  ggspatial::annotation_map_tile(type = "cartolight", zoom = 11, alpha = 0.6) +
+  ggspatial::annotation_north_arrow(style = north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +  
   scale_x_continuous(limits = c(-112.11, -111.7)) + 
   scale_y_continuous(limits = c(40.5, 40.8)) + 
+  geom_sf(data = s2_stores, color = "black", shape = 21, size = 3, fill = "white") +
   theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Benefit [$]", colours = pal)
+  scale_fill_viridis_c("Benefit [$]", direction = -1, na.value = NA)
 ```
 
 @fig-s2results shows the results of the scenario improving an existing store in
@@ -237,6 +244,7 @@ tar_load(ru_access)
 tar_load(s2_access_ut)
 tar_load(s2_access_sj)
 
+
 pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
 
 s2cost_ut <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "049") |> 
@@ -246,16 +254,19 @@ s2cost_ut <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "049") |>
   left_join(s2_access_ut |> rename(alt = dclogsum)) |> 
   mutate(diff = (base - alt) / mkt_betas["Utah.market"])
 
-ggplot(s2cost_ut, aes(fill = diff)) + 
-  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
-  scale_x_continuous(limits = c(-112.1, -111.5)) + 
+ggplot() + 
+  geom_sf(data = s2cost_ut, aes(fill = diff), lwd = 0) +
+  scale_fill_viridis_c("Benefit [$]", direction = -1) + 
+  ggspatial::annotation_map_tile(type = "cartolight", zoom = 10, alpha = 0.5) +
+  ggspatial::annotation_north_arrow(style = north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +  
+  scale_x_continuous(limits = c(-112.1, -111.5)) +
   scale_y_continuous(limits = c(39.9, 40.48)) + 
-  geom_sf(lwd = 0, alpha = 0.5) +
+  geom_sf(data = s2_stores, color = "black", shape = 21, size = 3, fill = "white") +
   theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
-        axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Benefit [$]", colours = pal)
+        axis.ticks.y = element_blank()) 
 
 
 s2cost_sj <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "037") |> 
@@ -266,15 +277,19 @@ s2cost_sj <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "037") |>
   mutate(diff = (base - alt) / mkt_betas["SanJuan.market"])
 
 
-ggplot(s2cost_sj, aes(fill = diff)) + 
-  ggspatial::annotation_map_tile(type = "cartolight", zoom = 10) +
-  geom_sf(lwd = 0, alpha = 0.5) +
+ggplot() + 
+  geom_sf(data = s2cost_sj, aes(fill = diff), lwd = 0) +
+  scale_fill_viridis_c("Benefit [$]", direction = -1, na.value = NA) +
+  ggspatial::annotation_map_tile("cartolight", zoom = 9, alpha = 0.5) +
+  ggspatial::annotation_north_arrow(style = north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +  
+  scale_x_continuous(limits = st_bbox(s2cost_sj)[c(1,3)]) +
+  scale_y_continuous(limits = st_bbox(s2cost_sj)[c(2,4)]) +
+  geom_sf(data = s2_stores, color = "black", shape = 21, size = 3, fill = "white") +
   theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
-        axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Benefit [$]", colours = pal)
-
+        axis.ticks.y = element_blank())
 ```
 
 The results of the third scenario, improving the access of non-motorized and
@@ -298,13 +313,14 @@ s3cost <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "035") |>
   left_join(s3_altd |> rename(alt = dclogsum)) |> 
   mutate(diff = (base - alt) / mkt_betas["SaltLake.market"])
 
-pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
 tar_load(gtfs_shape)
 gtfs_shape <- sf::st_simplify(gtfs_shape, dTolerance = 10)
 
-ggplot(s3cost, aes(fill = diff)) + 
-  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
-  geom_sf(lwd = 0, alpha = 0.5) +
+ggplot() + 
+  geom_sf(data = s3cost, aes(fill = diff), lwd = 0) + 
+  ggspatial::annotation_map_tile("cartolight", zoom = 10, alpha = 0.6) +
+  ggspatial::annotation_north_arrow(style = north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +
   geom_sf(data = gtfs_shape |> filter(mode != "BRT"), aes(color = mode)) +
   scale_x_continuous(limits = c(-112.11, -111.7)) + 
   scale_y_continuous(limits = c(40.5, 40.8)) + 
@@ -312,8 +328,9 @@ ggplot(s3cost, aes(fill = diff)) +
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Benefit [$]", colours = pal)
+  scale_fill_viridis_c("Benefit [$]", direction = -1, na.value = NA)+
   scale_color_manual("Transit", values = c("gray80", "black", "gray50"))
+
 ```
 
 ```{r s4results}
@@ -321,6 +338,7 @@ ggplot(s3cost, aes(fill = diff)) +
 #| fig-cap: Estimated per-household benefits of grocery deliveries in Salt Lake Valley.
 #| out-width: "6in"
 s4_altd <- tar_read(s4_access)
+tar_load(s4_stores)
 
 s4cost <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "035") |> 
   left_join(bg_acs, by = c("id" = "geoid")) |> 
@@ -329,24 +347,31 @@ s4cost <- bg |>  select(id = GEOID) |> filter(substr(id, 3, 5) == "035") |>
   left_join(s4_altd |> rename(alt = dclogsum)) |> 
   mutate(diff = (base - alt) / mkt_betas["SaltLake.market"])
 
-pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
 
-ggplot(s4cost, aes(fill = diff)) + 
-  ggspatial::annotation_map_tile(type = "cartolight", zoom = 12) +
-  geom_sf(lwd = 0, alpha = 0.5) +
+ggplot() +
+  geom_sf(data = s4cost, aes(fill = diff), lwd = 0) +
+  ggspatial::annotation_map_tile("cartolight", zoom = 10, alpha = 0.6) +
+  ggspatial::annotation_north_arrow(style = north_arrow_minimal, location = "tl") +
+  ggspatial::annotation_scale() +
+  geom_sf(data = s4_stores, color = "black", shape = 21, size = 3, fill = "white") +
   scale_x_continuous(limits = c(-112.11, -111.7)) + 
   scale_y_continuous(limits = c(40.5, 40.8)) + 
   theme(axis.text.x = element_blank(),
         axis.ticks.x = element_blank(),
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) +
-  scale_fill_gradientn("Benefit [$]", colours = pal)
+  scale_fill_viridis_c("Benefit [$]", direction = -1, na.value = NA)
 ```
 
 
 ```{r scenarios}
 #| label: tbl-scenarios
 #| tbl-cap: Scenario Benefits
+these_betas <- c(rep(mkt_betas["SaltLake.market"] , 2),
+                 mkt_betas["Utah.market"], mkt_betas["SanJuan.market"],
+                 rep(mkt_betas["SaltLake.market"], 2))
+
+
 df <- list(
   "New Store" = s1cost,
   "Salt Lake Valley" = s2cost,
