--- a/05_scenarios.qmd
+++ b/05_scenarios.qmd
@@ -385,17 +385,23 @@ df <- list(
   mutate(
     hh = households * diff,
     nw = (100 - white)/100 * households * diff,
-    li = households * lowincome/100 * diff
+    li = households * lowincome/100 * diff,
+    zv = households * zero_vehicle / 100 * diff
   ) |> 
   summarise(
-    across(hh:li, ~scales::dollar(sum(.x, na.rm = TRUE) / mkt_betas["SaltLake.market"] * -1)),
+    across(hh:zv, ~sum(.x, na.rm = TRUE)),
     .by = Scenario
-  ) 
+  )  |> 
+  mutate(
+    betas = these_betas * -1,
+    across(hh:zv, ~scales::dollar(./betas))
+  ) |> 
+  select(-betas)
 
 if(!knitr::pandoc_to("docx")){
-  kbl(df, booktabs = TRUE, col.names = c("Scenario", "Households", "Non-white", "Low-Income"),
+  kbl(df, booktabs = TRUE, col.names = c("Scenario", "Households", "Non-white", "Low-Income", "Zero-Vehicle"),
       digits = 0) |> 
-  add_header_above(c(" " = 1, "Weighted by" = 3)) |> 
+  add_header_above(c(" " = 1, "Weighted by" = 4)) |> 
   group_rows(group_label = "Improved Store", start_row = 2, end_row = 4) |> 
   kable_styling()
 }
@@ -409,13 +415,15 @@ benefit from each of the three scenarios (and the result of the second scenario
 in all three communities). The Households column multiplies the difference in
 destination choice log-sum at each block group by the number of households in
 that block group, while the non-white and low-income columns weight the
-difference by the share of non-white individuals and low-income households
-respectively. All demographic data comes from the American Community Survey
-5-year aggregations.
+difference by the share of non-white individuals and low-income 
+and zero-vehicle zero-vehicle respectively. All demographic data comes from the
+American Community Survey (ACS) 5-year aggregations; the ACS discloses households
+by vehicles available at the tract level, while all other household characteristics 
+are at the more spatially refined block group level.
 
 These alternate weighting schemes help to illustrate the potential equity of the
 benefit distribution should each scenario be pursued. The new store scenario in
-the Salt Lake community, for example, has a total benefit of approximately \$5.5
+the Salt Lake community, for example, has a total benefit of approximately \$13
 million. Of this amount, somewhat less than half the benefits go to non-white
 individuals and less than one-fifth to low-income households. These ratios are
 more or less the same for the store improvement scenario and the improved
