--- a/05_scenarios.qmd
+++ b/05_scenarios.qmd
@@ -12,6 +12,8 @@ library(wesanderson)
 library(sf)
 library(ggspatial)
 library(viridisLite)
+knitr::opts_chunk$set(cache = FALSE)
+pal <- wesanderson::wes_palette("Zissou1", 100, type = "continuous")
 ```
 
 In this section, we develop a series of scenarios to which we apply the models
@@ -39,9 +41,11 @@ included in all the alternatives and therefore cancels out [@train2009] in
 estimation. This means we cannot assess the *absolute* value of utility, but we
 can assess the *relative* monetary benefit of the difference between two
 scenarios as $$
-\mathrm{Benefit} = \sum_{i}\left(-\frac{\omega_i}{\beta_{mkt}}(CS_i^1 - CS_i^1)\right)
-$$ where a weight $\omega$ accounts for the population in each origin zone $i$
-and the $\beta_{mkt}$ converts the difference in utility into a dollar amount.
+\mathrm{Benefit} = \sum_{i}\left(-\frac{\omega_i}{\beta_{mkt}}(CS_i' - CS_i)\right)
+$$ with the consumer surplus of the "improved" scenario in each origin zone $i$ 
+indicated as $CS_i'$ and the unimproved counterpart as $CS_i$, a weight $\omega$
+accounts for the population in the zone, and the $\beta_{mkt}$ converts the
+difference in utility into a dollar amount.
 
 ## Scenario Descriptions
 
@@ -126,17 +130,18 @@ west Salt Lake Valley community.
 ### Grocery delivery services
 
 This strategy assumes that the most effective way to bring quality nutrition to an 
-inaccessible is not to change the distribution of stores or transport, but to
+inaccessible location is not to change the distribution of stores or the quality of transport, but to
 support and enable delivery services that will bring the nutrition to individuals.
-To model this scenario, we assume that 30% of the full-service grocery stores in 
+To model this scenario, we assume that 20% of the full-service grocery stores in 
 the west Salt Lake Valley community offer a delivery service. This raises the
 price of the market basket by $10, but reduces the travel time on all modes to 0
-if the store is within 5 kilometers.
+if the store is within 3 kilometers.
 All of these assumptions are imperfect: a local grocery chain presently offers
 services at a $7 delivery fee, which is not paid by all customers; additionally, 
 delivery services require that customers expend time placing online orders; and 
-service providers typically place a long-distance charge rather than a service area
-limit. Regardless, these assumptions will work for the purpose of this exercise.
+service providers in the region typically place a long-distance charge rather
+than a service area limit. Regardless, these assumptions will work for the
+purpose of this exercise.
 
 ## Scenario Results
 
@@ -447,3 +452,15 @@ of improvement simulated in the second scenario could be accomplished within the
 envelope of the existing store; it may be that such improvements would meet or
 exceed the cost of building a new store on a new site, along with stocking,
 staffing, and operating the store.
+
+By far the highest benefit observed in these scenarios is the increased availability
+of delivery services, but this scenario must be treated with some skepticism. 
+Delivery services place costs on shoppers that are not well-quantified in the existing model:
+potential increases in shopping time, uncertainty over selection, inability to
+inspect goods prior to purchase, delays in delivery, and so forth. Additionally,
+low extant delivery prices may be a function of predatory pricing strategies by
+application developers seeking to capture market share first, and achieve
+profitability later [@moore2022]. Resolving all of these issues cannot be 
+handled in the present analysis, but it must be at least considered that grocery
+delivery may have the greatest consumer surplus of these four strategies by a
+wide margin.
