Add reference on predatory pricing

--- a/groceries.bib
+++ b/groceries.bib
@@ -849,6 +849,19 @@
   file = {/Users/gregmacfarlane/Zotero/storage/2LLMPJTV/Monfort et al. - 2021 - Weekday bicycle traffic and crash rates during the.pdf;/Users/gregmacfarlane/Zotero/storage/A7YDILGC/S2214140521003194.html}
 }
 
+@article{moore2022,
+  title = {Predatory {{Pricing}}, {{Network Effects}}, and the {{Food Delivery Industry}}: {{A Case Study}}},
+  shorttitle = {Predatory {{Pricing}}, {{Network Effects}}, and the {{Food Delivery Industry}}},
+  author = {Moore, Dylan V.},
+  year = {2022},
+  journal = {Northern Kentucky Law Review},
+  volume = {49},
+  number = {1},
+  pages = {93--114},
+  urldate = {2024-05-14},
+  langid = {english}
+}
+
 @misc{nationalhighwaytrafficsafetyadministration2022,
   type = {Text},
   title = {Countermeasures That {{Work}}: {{Distracted Driving}}},
