--- a/groceries.bib
+++ b/groceries.bib
@@ -785,6 +785,24 @@
   file = {/Users/gregmacfarlane/Zotero/storage/LHE97PQF/Lunsford et al. - 2021 - Analysis of Availability, Quality, and Price of Fo.pdf}
 }
 
+@article{macfarlane2021b,
+  title = {Modeling the Impacts of Park Access on Health Outcomes: {{A}} Utility-Based Accessibility Approach},
+  shorttitle = {Modeling the Impacts of Park Access on Health Outcomes},
+  author = {Macfarlane, Gregory S and Boyd, Nico and Taylor, John E and Watkins, Kari},
+  year = {2021},
+  month = oct,
+  journal = {Environment and Planning B: Urban Analytics and City Science},
+  volume = {48},
+  number = {8},
+  pages = {2289--2306},
+  publisher = {SAGE Publications Ltd STM},
+  issn = {2399-8083},
+  doi = {10.1177/2399808320974027},
+  urldate = {2024-05-15},
+  abstract = {Recent research has underscored the potential for public green spaces to influence individual and societal health outcomes, but empirical measurements of such influences have yielded mixed results to date, with particular disagreement surrounding how access to parks ought to be defined while controlling for alternate explanations. In this paper, we apply a comprehensive measure of park accessibility drawn from random utility choice theory, which avoids arbitrary assertions of proximity while incorporating potentially numerous amenities and attributes of both the parks and the population. We apply this utility-based accessibility measure to correlate Census tract-level obesity and physical activity rate estimates from the Centers for Disease Control and Prevention's 500 Cities project with tract-level American Community Survey socioeconomic data in New York City, paired with geographic open space data from New York City. Controlling for the socioeconomic variables and spatially correlated error terms, we show a positive and significant relationship between park access and physical activity rates. The data also suggest a negative relationship between park access and obesity rates, beyond what is expected through physical activity and socioeconomics. In doing so, this research contributes a more comprehensive modeling approach for measuring the impact of park access on health, and may improve our understanding of the role parks and access to them can serve in furthering public health objectives.},
+  langid = {english}
+}
+
 @article{macfarlane2022a,
   title = {City Parks and Slow Streets: {{A}} Utility-Based Access and Equity Analysis},
   shorttitle = {City Parks and Slow Streets},
